--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,12 +3,16 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
-
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: $font-family-base;
+}
+
+html {
+    height: 100%;
+    overflow-y: auto;
 }
 
 body {
@@ -17,6 +21,9 @@ body {
     line-height: 1.5;
     color: $color-gray-900;
     background-color: $color-gray-700;
+    min-height: 100%;
+    position: relative;
     overflow-x: hidden;
+    overflow-y: auto;
 }
 
